<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="image_size_options">
        <item>Unrestricted</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra-large</item>
    </string-array>     
    
    <string-array name="color_filter_options">
        <item>Unrestricted</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Teal</item>
        <item>White</item>
        <item>Yellow</item>
    </string-array>
    
    <string-array name="image_type_options">
        <item>Unrestricted</item>
        <item>Clip art</item>
        <item>Faces</item>
        <item>Line art</item>
        <item>Photos</item>
   	</string-array>
   	
    <string name="app_name">Grid Image Searcher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_filters">Filters</string>
    <string name="btn_search">Search</string>
    <string name="et_hint">Enter search term</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_filters">Grid Image Searcher</string>
    <string name="title_activity_filter">Grid Image Searcher</string>
    <string name="tv_filter_header">Advanced search options</string>
    <string name="tv_image_size">Image size</string>
    <string name="tv_color_filter">Color filter</string>
    <string name="tv_image_type">Image type</string>
    <string name="tv_site_filter">Site filter</string>
    <string name="et_filter_hint">(e.g., npr.org)</string>	
    <string name="btn_save">Save</string>

</resources>
